--- a/public/formstyle.css
+++ b/public/formstyle.css
@@ -6,6 +6,7 @@
 body {
     background: #f2f2f2;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -63,4 +64,8 @@ button {
 
 button:hover {
     background: #0056b3;
+}
+
+a {
+    margin-top: .75rem;
 }
