--- a/public/formstyle.css
+++ b/public/formstyle.css
@@ -35,7 +35,7 @@ label {
     font-weight: bold;
 }
 
-input {
+input, textarea {
     width: 100%;
     padding: 0.75rem;
     margin-bottom: 1.2rem;
