--- a/views/newmsg.ejs
+++ b/views/newmsg.ejs
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/formstyle.css">
     </head>
     <body>
-        <form method="POST" action="/messages/new-message">
+        <form method="POST" action="/messages/new">
             <h2>Create new message</h2>
 
             <label for="firstname">Title</label>
