--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,10 +4,19 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Webbs</title>
-        <link rel="stylesheet" href="/">
+        <link rel="stylesheet" href="/main.css">
     </head>
     <body>
-        <h1> Welcome, <%= user.username %></h1>
-        <a href="/log-out">LOG OUT</a>
+        <%- include("navbar", { user }) %>
+        <% if (user) { %>
+            <h1>Welcome, <%= user.username %></h1>
+        <% } %>
+
+        <div class="container">
+            <% messages.forEach(m => { %>
+            <%- include("message", { m, user }) %>
+            <% }) %>
+
+        </div>
     </body>
 </html>
