edit and delete permissions, display

--- a/public/main.css
+++ b/public/main.css
@@ -39,22 +39,75 @@ a:visited {
     color: inherit;
 }
 
+.greetings {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.new {
+    background-color: beige;
+    font-weight: bold;
+}
+.new:hover {
+    background-color: grey;
+}
+
+.welcome, h2 {
+    color: #433E5F;
+}
+
 .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    align-items: start;
     gap: 3rem;
     width: 80%;
     margin: auto;
 }
-
 .message {
-    border: 2px solid black;
+    border: 3px dashed black;
     border-radius: 10px;
     padding: 0.75rem;
     margin-bottom: 0.5rem;
     display: grid;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto 1fr auto auto;
     gap: 0.5rem;
+    background-color: #fffb96;
+    font-size: 1.25rem;
+    position: relative;
+}
+
+.opts {
+    display: flex;
+    justify-content: right;
+}
+
+.btn {
+    text-decoration: none;
+    border-radius: 3px;
+    padding: 0.3rem 0.6rem;
+    font-size: 1.3rem;
+    font-family: inherit;
+    border: 2px solid black;
+    cursor: pointer;
+    display: inline-block;
+    min-width: 20px;
+    text-align: center;
+}
+
+.edit-btn {
+    background-color: #039960;
+    color: white;
+    margin-right: 0.3rem;
+}
+
+.delete-btn {
+    background-color: #F44336;
+    color: white;
+}
+
+.message a {
+    color: white;
 }
 
 .userdata {
