--- a/public/formstyle.css
+++ b/public/formstyle.css
@@ -53,7 +53,7 @@ input:focus {
 button {
     width: 100%;
     padding: 0.75rem;
-    background: #007bff;
+    background: #433E5F;
     color: white;
     font-weight: bold;
     border: none;
