comments to publications

--- a/public/main.css
+++ b/public/main.css
@@ -64,17 +64,16 @@ a:visited {
     width: 80%;
     margin: auto;
 }
+
 .message {
-    border: 3px dashed black;
-    border-radius: 10px;
-    padding: 0.75rem;
-    margin-bottom: 0.5rem;
-    display: grid;
-    grid-template-rows: auto 1fr auto auto;
+    display: flex;
+    flex-direction: column;
     gap: 0.5rem;
     background-color: #fffb96;
-    font-size: 1.25rem;
-    position: relative;
+    padding: 1rem;
+    border: 3px dashed black;
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 .opts {
@@ -117,4 +116,13 @@ a:visited {
     color: #555;
     display: flex;
     justify-content: space-between;
+}
+
+.reply {
+    border-style: solid;
+    padding: .75rem;
+    overflow-wrap: break-word;
+}
+.r-name {
+    font-weight: bolder;
 }
