--- a/public/main.css
+++ b/public/main.css
@@ -3,7 +3,12 @@
     padding: 0;
 }
 
+body {
+    font-family: "Cambria";
+}
+
 .navbar {
+    font-family: "Arial";
     background: #0c4e4f;
     background: linear-gradient(180deg,rgba(12, 78, 79, 1) 0%, rgba(17, 27, 99, 1) 100%);
     margin-bottom: 2rem;
@@ -18,6 +23,7 @@
 .navbar h1 {
     text-align: center;
 }
+
 .navbar h1::after {
     content: "Web bulletin system";
     font-size: .9rem;
@@ -29,6 +35,7 @@
 
 .navbar a {
     text-decoration: none;
+    color: white;
 }
 
 .logout {
